[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://cam_control.gd" type="Script" id=2]
[ext_resource path="res://Builder.tscn" type="PackedScene" id=3]

[sub_resource type="CylinderMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="SpatialMaterial" id=2]

render_priority = 0
flags_transparent = true
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0, 0, 0.502784 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Flags" ]

[sub_resource type="NavigationMesh" id=5]

vertices = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 1, 3, 2 ) ]
sample_partition_type/sample_partition_type = 0
cell/size = 0.3
cell/height = 0.2
agent/height = 2.0
agent/radius = 0.6
agent/max_climb = 0.9
agent/max_slope = 45.0
region/min_size = 8.0
region/merge_size = 20.0
edge/max_length = 12.0
edge/max_error = 1.3
polygon/verts_per_poly = 6.0
detail/sample_distance = 6.0
detail/sample_max_error = 1.0
filter/low_hanging_obstacles = false
filter/ledge_spans = false
filter/filter_walkable_low_height_spans = false

[sub_resource type="PlaneShape" id=6]

plane = Plane( 0, 1, 0, 0 )

[sub_resource type="PlaneMesh" id=7]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=8]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.421875, 0.421875, 0.421875, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.11
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Roughness" ]

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
menu_popup = NodePath("VBoxContainer")

[node name="OmniLight" type="OmniLight" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.63023, -2.89416 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 3.0
light_indirect_energy = 16.0
light_negative = false
light_specular = 0.62
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 10.0
omni_attenuation = 1.0
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Editor", "Light", "Omni", "Shadow" ]

[node name="cam_control" type="Spatial" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.15339 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
cam_control = NodePath("shoulder")
cam_arm = NodePath("shoulder/arm")
cam = NodePath("shoulder/arm/Camera")
cam_eye = NodePath("../circle")

[node name="shoulder" type="Spatial" parent="cam_control" index="0"]

transform = Transform( 1, 0, 0, 0, 0.662424, -0.749129, 0, 0.749129, 0.662424, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="arm" type="Spatial" parent="cam_control/shoulder" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.00035, 0.278015 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="cam_control/shoulder/arm" index="0"]

transform = Transform( 1, 0, 0, 0, 0.377522, 0.926001, 0, -0.926001, 0.377522, 0, 0, -1.19209e-007 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 713.0
margin_top = 392.0
margin_right = 888.0
margin_bottom = 508.0
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label" type="Label" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 175.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pause Menu"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resume" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 175.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1

[node name="reset" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 175.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1

[node name="exit" type="Button" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 175.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1

[node name="Builder" parent="." index="3" instance=ExtResource( 3 )]

transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.359828, 2.17997 )
_sections_unfolded = [ "Transform" ]

[node name="circle" type="MeshInstance" parent="." index="4"]

transform = Transform( 0.25, 0, 0, 0, 0.02, 0, 0, 0, 0.25, 0, 0.3, 3.51505 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Map" type="Navigation" parent="." index="5"]

up_vector = Vector3( 0, 1, 0 )

[node name="Nav" type="NavigationMeshInstance" parent="Map" index="0"]

transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
navmesh = SubResource( 5 )
enabled = true
_sections_unfolded = [ "Transform" ]

[node name="StaticBody" type="StaticBody" parent="Map" index="1"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map/StaticBody" index="0"]

transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 6 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Map/StaticBody" index="1"]

transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 7 )
skeleton = NodePath("..")
material/0 = SubResource( 8 )
_sections_unfolded = [ "Transform", "material" ]

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]

[connection signal="pressed" from="VBoxContainer/reset" to="." method="_on_reset_pressed"]

[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]


